# triton-client-polyglot-example

./: .dockerignore  .gitignore  LICENSE  README.md  build_perftest_container.sh  build_triton_container.sh  run_perftest_container.sh  run_triton_container.sh
client/python/: example_clip.py  pyproject.toml
client/typescript/: .gitignore  .prettierignore  .prettierrc.js  README.md  package.json  tsconfig.json
client/typescript/src/: index.ts  utils.ts
client/typescript/test/triton/: tritonTensorUtil.test.ts
models/clip/: config.pbtxt
models/clip-core/: config.pbtxt
models/clip-preprocess/: config.pbtxt
models/clip-preprocess/1/: model.py
models/clip-preprocess/warmup/: base64png  utf8text
notebooks/: Dockerfile  build_image.sh  jupyter_notebook_config.py  pyproject.toml  run_notebook_container.sh
perftest/: Dockerfile  clip-preprocess-input-data.json  model_analyzer_config.yaml
sample-clients/typescript/client-js/: package.json
triton/: Dockerfile  ready.py
