[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = {extras = ["onnx", "ja"], version = "^4.24.0"}
torch = "1.13.0"
ipykernel = "^6.17.1"
pillow = "^9.3.0"
tritonclient = {version ="^2.28.0", extras=["all"]}
typer = "^0.7.0"
scipy = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
