[tool.poetry]
name = "tritonclient_sample_app"
version = "0.1.0"
description = "a sample app using tritonclient-grpc"
authors = ["tuxedocat <tuxedocat@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tritonclient = {extras = ["all"], version = "^2.20.0"}

[tool.poetry.dev-dependencies]
mypy = "^0.942"
black = "^22.3.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
